--- a/public/style/home.css
+++ b/public/style/home.css
@@ -9,6 +9,7 @@
 	--cinza-secundario: #414341;
 	--cinza-terciario: #a1a2a1;
 }
+
 *{
     padding: 0;
 	margin: 0;
@@ -18,6 +19,7 @@
 
   
 }
+
 
 
 
@@ -55,9 +57,23 @@
 #home-container{
     display: flex;
     flex-direction: column;
-    padding: 10em 23%;
+    padding: 12em 60vh;
     
 }
+
+#icon-language-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#icon-language-container img {
+    width: 550px;
+    height: auto;
+    opacity: 70%; 
+    margin-left: -15vh;
+}
+
 
 .sub-title-container {
     display: flex;
@@ -75,10 +91,11 @@
 
 
 .icon-list {
+    display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;
+   
 }
 
 .icon-list li {
@@ -107,19 +124,42 @@
 
 
 
+
 .name-container{
     text-align: center;
 }
 
 .name-container h1{
-    font-size: 8em;
+    font-size: 17vh;
     font-weight: 600;
-    margin-top: -5%;
+    margin-top: -8%;
+}
+
+.name-container h2{
+    font-size: 2.5vh;
+    font-weight: 600;
+    margin-top: -8%;
 }
 
 .name-container p{
-    font-size: 0.8em; 
+    font-size: 1em; 
     text-align: right; 
     margin-top: 0;  
+}
+
+.icons-contact-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 1vh 90vh;
+}
+
+.icons-contact-container img {
+    transition: transform 0.3s ease; 
+}
+
+.icons-contact-container img:hover {
+    transform: translateY(-5px);
 }
 
