--- a/public/style/home.css
+++ b/public/style/home.css
@@ -21,6 +21,19 @@
     }
 }
 
+@keyframes typing {
+   from{
+    width: 0;
+    
+   }
+}
+
+@keyframes blinking {
+    50%{
+        border-right-color: transparent;
+    }
+}
+
 *{
     padding: 0;
 	margin: 0;
@@ -111,10 +124,32 @@ body{
     margin-bottom: 2rem;
 }
 
+
 .sub-title-container h3{
-    padding: 0 20px 3px 0;
-    border-bottom: 5px solid var(--lightgreen); 
+    padding: 0 20px 10px 0;
+   
+    border-right: 4px solid black;
     font-size: 1em;
+    width: 16ch;
+
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 2s steps(16),
+    blinking 0.5s infinite step-end alternate;
+
+    position: relative;
+}
+
+.sub-title-container h3::after{
+    content: " ";
+   
+    background-color: var(--lightgreen);
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
 }
 
 .icon-list {
@@ -256,6 +291,14 @@ body{
     margin-right: 5vh;
     position: relative;
 
+    transition: .35s;
+    cursor: pointer;
+
+}
+
+.skills-cards-container:hover > :not(:hover){
+    opacity: .4;
+    transform: scale(0.9);
 }
 
 .skills-cards-container-cards-background{
